--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,7 @@
     = javascript_include_tag 'jquery.min.js'
     = javascript_include_tag 'rails'
     = formtastic_stylesheet_link_tag
+    = include_tiny_mce_if_needed
 
     = javascript_include_tag 'infogrid'
     = stylesheet_link_tag 'infogrid'
@@ -106,7 +107,8 @@
                   = link_to t('site.issue'), issues_path
                   %hr
                   - if admin?
-                    = link_to t('notice.new_notice'), new_notice_url if admin?
+                    = link_to t('notice.new_notice'), new_notice_url
+                    = link_to t('article.new_article'), new_article_url
                     = link_to t('system.message'), '/s/message'
                     %hr
                     = link_to t('site.setting'), '/s/setting'
@@ -125,9 +127,9 @@
                 %span.head_menu
                   = link_to t('site.transport_center'), transports_path
 
-            %li
-              %span.head_menu
-                = link_to t('site.rule')
+              %li
+                %span.head_menu
+                  = link_to t('site.rule'), articles_path
 
             - if super?
               %li
