--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,9 +9,10 @@
     = javascript_include_tag 'jquery.min.js'
 
     = javascript_include_tag 'jquery.validationEngine'
-    = javascript_include_tag 'jquery.validationEngine-en'
+    = javascript_include_tag 'jquery.validationEngine-zh'
     = stylesheet_link_tag 'validationEngine.jquery'
-    = stylesheet_link_tag 'template'
+    =# stylesheet_link_tag 'template'
+    = javascript_include_tag 'site'
 
     = javascript_include_tag 'rails'
     = formtastic_stylesheet_link_tag
