--- a/app/views/transports/show.html.haml
+++ b/app/views/transports/show.html.haml
@@ -24,4 +24,4 @@
   = @transport.real_tran
 %p
   %b= t 'formtastic.labels.transport.tran_time'
-  = @transport.tran_time
+  = l @transport.tran_time
