--- a/app/views/issues/_form.html.haml
+++ b/app/views/issues/_form.html.haml
@@ -14,7 +14,7 @@
 
 = semantic_form_for @issue do |f| 
   = f.inputs do
-    = f.input :title
-    = f.input :content, :as => :text
-    = f.input :itype, :as => :select, :collection => {'大额提现' => 'cash', '一般问题' => 'normal'} if session[:issue_type].nil?
+    = f.input :title, :input_html => { :class => "validate[required],minSize[5]" }
+    = f.input :content, :as => :text, :input_html => { :class => "validate[required],minSize[5]" }
+    = f.input :itype, :as => :select, :collection => {'大额提现' => 'cash', '一般问题' => 'normal'}, :input_html => { :class => "validate[required]" } if session[:issue_type].nil?
     = f.submit t('issue.send')
