--- a/app/views/site/_customers.html.haml
+++ b/app/views/site/_customers.html.haml
@@ -1,11 +1,12 @@
-%table
-  - @customers.each do |c|
-    %tr
-      %td
-        = t('service.service') + ': ' + c.username
-      %td
-        - if c.im_q
-          = 'QQ :' + c.im_q
-          = link_to image_tag("http://wpa.qq.com/pa?p=1:#{c.im_q}:4", :alt=>'点击这里给我发消息'), "tencent://message/?uin=#{c.im_q}&Site=&Menu=yes", :target=>'_black'
+.customer_service
+  %h1= t 'site.service_list'
+  %ul#customer_service
+    - @customers.each do |c|
+      - if c.im_q
+        %li
+          = t('service.service') + ': ' + c.username
           %br
-          = "Email: #{c.im_q}@qq.com"
+          - if c.im_q
+            = link_to "tencent://message/?uin=#{c.im_q}&Site=&Menu=yes", :target=>'_black' do
+              = "QQ:#{c.im_q}"
+              = image_tag("http://wpa.qq.com/pa?p=1:#{c.im_q}:4", :alt=>'点击这里给我发消息')
