--- a/public/stylesheets/fmenu.css
+++ b/public/stylesheets/fmenu.css
@@ -8,10 +8,10 @@ p { line-height:18px; }
 
 #info { margin:auto; width:600px; color:#333333; padding:10px; background:#f4f4f4; border:1px solid #DDD; }
 */
-/*#nicemenu { margin:0 auto; width:100%; margin-top:0px; border-bottom:dotted 1px #E5E5E5; font-size: 18px;}*/
-#nicemenu { margin:0 auto; width:100%; margin-top:0px; border-bottom:dotted 1px #E5E5E5; font-size: 18px; background: #3b69b1; }/*#3b69b1;}*/
-/*#nicemenu a { color:#0066CC; text-decoration:none; }*/
-#nicemenu a { color:#fff; text-decoration:none; }
+#nicemenu { margin:0 auto; width:100%; margin-top:0px; border-bottom:dotted 1px #E5E5E5; font-size: 18px;}
+/*#nicemenu { margin:0 auto; width:100%; margin-top:0px; border-bottom:dotted 1px #E5E5E5; font-size: 18px; background: #3b69b1; }/*#3b69b1;}*/
+#nicemenu a { color:#0066CC; text-decoration:none; }
+/*#nicemenu a { color:#fff; text-decoration:none; }*/
 #nicemenu a:hover { text-decoration:underline; }	
 #nicemenu li { display:inline; position:relative; z-index:20;}
 #nicemenu li span { position:relative; z-index:10; padding:4px 4px 4px 6px;  border-bottom:none; line-height:18px; }	
@@ -25,8 +25,8 @@ p { line-height:18px; }
 #nicemenu li span.active a { }
 #nicemenu li span.active a:hover { text-decoration:none; }	
 #nicemenu img.arrow { /*margin-left:4px;*/ cursor:pointer; }
-/*#nicemenu div.sub_menu { display:none; position:absolute; left:0; top:0px; margin-top:18px; border-top:solid 1px #E5E5E5; border-left:solid 1px #E5E5E5; border-right:solid 1px #999999; border-bottom:solid 1px #999999; padding:4px; top:2px; width:160px; background:#FFFFFF; }*/
-#nicemenu div.sub_menu { display:none; position:absolute; left:0; top:0px; margin-top:18px; border-top:solid 1px #E5E5E5; border-left:solid 1px #E5E5E5; border-right:solid 1px #999999; border-bottom:solid 1px #999999; padding:4px; top:2px; width:160px; background:#3b69b1; }
+#nicemenu div.sub_menu { display:none; position:absolute; left:0; top:0px; margin-top:18px; border-top:solid 1px #E5E5E5; border-left:solid 1px #E5E5E5; border-right:solid 1px #999999; border-bottom:solid 1px #999999; padding:4px; top:2px; width:160px; background:#FFFFFF; }
+/*#nicemenu div.sub_menu { display:none; position:absolute; left:0; top:0px; margin-top:18px; border-top:solid 1px #E5E5E5; border-left:solid 1px #E5E5E5; border-right:solid 1px #999999; border-bottom:solid 1px #999999; padding:4px; top:2px; width:160px; background:#3b69b1; }*/
 * html #nicemenu div.sub_menu { margin-top:23px; } /* IE6 */
 *+html #nicemenu div.sub_menu { margin-top:23px; } /* IE7 */
 #nicemenu div.sub_menu a:link, 
