--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -4,10 +4,11 @@
 #roundshape
   = form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
     = devise_error_messages!
-    %p
-      = t 'site.login_name'
-      %br/
-      = f.text_field :username, { :class => 'validate[required],minSize[6],maxSize[20]' }
+    /
+      %p
+        =# t 'site.login_name'
+        %br/
+        =# f.text_field :username, { :class => 'validate[required],minSize[6],maxSize[20]' }
     %p
       = t 'page.email'
       %br/
@@ -20,7 +21,7 @@
     %p
       = t 'site.password_confirmation'
       %br/
-      = f.password_field :password_confirmation, { :class => 'validate[required],minSize[6],maxSize[20]' }
+      = f.password_field :password_confirmation, { :class => 'validate[required,equals[user_password]],minSize[6],maxSize[20]' }
     %p
       = t 'site.current_password'
       %i= t 'site.need_current_password'
