--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -32,7 +32,7 @@
     = javascript_include_tag 'news'
     = stylesheet_link_tag 'news'
 
-    = javascript_include_tag 'ticker'
+    =# javascript_include_tag 'ticker'
     = stylesheet_link_tag 'simpleTicker'
 
     = javascript_include_tag 'jquery.easyListSplitter'
