--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -487,13 +487,14 @@ tfoot th, tfoot td {
 
 /* line 301, ../../../app/stylesheets/site.scss */
 .bordershape {
-  margin: 10px;
+  padding: 3px 5px;
+  margin: 10px 10px 0 0;
   border: 1px dashed #92cdec;
   -moz-border-radius: 9px 9px 9px 9px;
   -webkit-border-radius: 3px;
 }
 
-/* line 306, ../../../app/stylesheets/site.scss */
+/* line 308, ../../../app/stylesheets/site.scss */
 .bordershape a {
   text-decoration: none;
 }
@@ -502,7 +503,7 @@ tfoot th, tfoot td {
 /*html{font-size:62.5%}
 body{font-size:1.2em;color:#294f88}*/
 /*.customer_service {margin:10px;border:1px solid #92cdec;background:#d7e7ff;padding:30px 30px 0 30px}*/
-/* line 313, ../../../app/stylesheets/site.scss */
+/* line 315, ../../../app/stylesheets/site.scss */
 .customer_service {
   margin: 10px;
   border-bottom: 1px solid #92cdec;
@@ -515,14 +516,14 @@ h2{margin:0;padding:10px 0 5px 0;font-size:1.5em;clear:both}
 p{font-size:1.2em;line-height:170%;margin-bottom:30px;clear:both}
 ul,ol{padding:0;margin:0;font-size:1.2em}
 */
-/* line 319, ../../../app/stylesheets/site.scss */
+/* line 321, ../../../app/stylesheets/site.scss */
 .customer_service h1 {
   margin: 0;
   padding: 0 0 10px 0;
   font-size: 1.2em;
 }
 
-/* line 320, ../../../app/stylesheets/site.scss */
+/* line 322, ../../../app/stylesheets/site.scss */
 .customer_service p {
   font-size: 1.2em;
   line-height: 170%;
@@ -530,14 +531,14 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   clear: both;
 }
 
-/* line 321, ../../../app/stylesheets/site.scss */
+/* line 323, ../../../app/stylesheets/site.scss */
 .customer_service ul, ol {
   padding: 0;
   margin: 0;
   font-size: 1em;
 }
 
-/* line 322, ../../../app/stylesheets/site.scss */
+/* line 324, ../../../app/stylesheets/site.scss */
 .customer_service ul, .customer_service ol {
   list-style-type: none;
   background: url(/images/dotted.gif) 0 0 repeat-x;
@@ -546,7 +547,7 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   margin: 0 10px 30px 0;
 }
 
-/* line 323, ../../../app/stylesheets/site.scss */
+/* line 325, ../../../app/stylesheets/site.scss */
 .customer_service li {
   background: url(/images/dotted.gif) bottom left repeat-x;
   width: 180px;
@@ -554,7 +555,7 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   padding: 0;
 }
 
-/* line 324, ../../../app/stylesheets/site.scss */
+/* line 326, ../../../app/stylesheets/site.scss */
 .customer_service li a {
   padding: 8px 20px 8px 0;
   width: 160px;
@@ -564,7 +565,7 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   color: #294f88;
 }
 
-/* line 325, ../../../app/stylesheets/site.scss */
+/* line 327, ../../../app/stylesheets/site.scss */
 .customer_service li a:hover {
   background-image: url(/images/arrow-right-dark.gif);
 }
