--- a/public/stylesheets/news.css
+++ b/public/stylesheets/news.css
@@ -1,8 +1,8 @@
 /*{ margin:0; padding:0; }*/
 
 #newsticker-demo { 
-width:100%; 
-background:#EAF4F5; 
+width:90%; 
+      /*background:#EAF4F5; */
 padding:5px 5px 0; 
         font-family:Verdana,Arial,Sans-Serif;
         font-size:12px;
@@ -13,9 +13,10 @@ margin:20px auto;
 #newsticker-demo img { border: 2px solid #FFFFFF; }
 
 #newsticker-demo .title {
-  text-align:center;
-  font-size:14px;
-  font-weight:bold;
+background:#EAF4F5;
+           text-align:center;
+           font-size:14px;
+           font-weight:bold;
 padding:5px;
 }
 
